[tool.poetry]
name = "yieldnavigator"
version = "0.1.0"
description = ""
authors = ["JEONGMYEONGHONG"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.41"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
